[project]
name = "gen-art-dataset-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "datasets==5.0.0",
    "dill==0.4.1",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.20.1",
    "idna==3.18",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "numpy==2.5.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "propcache==0.5.2",
    "pyarrow==24.0.0",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "tqdm==4.68.3",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "xxhash==3.7.1",
    "yarl==1.24.2",
]
