[project]
name = "wl-expressiveness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "idna==3.18",
    "loguru==0.7.3",
    "numpy==2.5.0",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "python-dateutil==2.9.0.post0",
    "rdkit==2026.3.3",
    "requests==2.34.2",
    "scipy==1.18.0",
    "six==1.17.0",
    "tqdm==4.68.3",
    "urllib3==2.7.0",
]
